# timeit

./: Cargo.toml  README.md
src/: lib.rs
tests/: it.rs
