[package]
name = "timeit"
version = "0.1.0"
description = "Even more convenient that Instance::elapsed"
license = "MIT OR Apache-2.0"
repository = "https://github.com/matklad/timeit"
authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]
edition = "2018"

exclude = [".github/", "bors.toml", "rustfmt.toml"]

[workspace]
members = ["xtask"]
